--- a/index.html
+++ b/index.html
@@ -124,7 +124,9 @@
 				</div>
 				<div class="information__table">
 					<ul>
-						<li class="information"></li>
+						<li class="information">
+							<img src="assets/images/phone_icon.png" alt="">
+						</li>
 						<li class="information"></li>
 					</ul>
 					<ul>
