--- a/index.html
+++ b/index.html
@@ -125,13 +125,23 @@
 				<div class="information__table">
 					<ul>
 						<li class="information">
-							<img src="assets/images/phone_icon.png" alt="">
+							<img src="assets/images/bookshelf.ico" alt="">
+							<p>Комфортная мебель</p>
 						</li>
-						<li class="information"></li>
+						<li class="information">
+							<img src="assets/images/delivery-truck.png" alt="">
+							<p>Быстрая доставка</p>
+						</li>
 					</ul>
 					<ul>
-						<li class="information"></li>
-						<li class="information"></li>
+						<li class="information">
+							<img src="assets/images/call-center-agent.png" alt="">
+							<p>Техподдержка 24/7</p>
+						</li>
+						<li class="information">
+							<img src="assets/images/reliability.png" alt="">
+							<p>10 лет на рынке</p>
+						</li>
 					</ul>
 				</div>
 			</div>
