--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="ru">
 	<head>
 		<meta charset="UTF-8">
+
+		<meta name="viewport" content="width=device-width">
 		<link rel="stylesheet" href="assets/css/style.css">
 		<link rel="preconnect" href="https://fonts.gstatic.com"> 
 		<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700;900&display=swap" rel="stylesheet">
@@ -88,14 +90,12 @@
 					<li><a href="" class="down__menu__link">Мебель под заказ</a></li>
 					<li><a href="" class="down__menu__link">Распродажа</a></li>
 					<li><a href="" class="down__menu__link">Контакты</a></li>
-					<li>
-						<div class="search">
-							<form>
-	    						<input class="search__place" type="text" placeholder="Искать здесь...">
-	    						<button class="search__submit" type="submit"></button>
-	  						</form>
-  						</div>
-					</li>
+					<div class="search">
+						<form>
+	    					<input class="search__place" type="text" placeholder="Искать здесь...">
+	    					<button class="search__submit" type="submit"></button>
+	  					</form>
+  					</div>
 				</ul>
 			</nav>
 		</div>
