--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 			<nav class="header__down">
 				<ul class="down__menu__list container">
 					<li>
-						<a href="" class="down__menu__link">Мебель для офиса</a>
+						<a href="./dir/shop.html" class="down__menu__link">Мебель для офиса</a>
 						<ul class="down__sub-menu__list">
 							<li><a href="" class="sub-menu__link">Мебель для сотрудников</a></li>
 							<li><a href="" class="sub-menu__link">Кабинеты эконом-класса</a></li>
