--- a/dir/shop.html
+++ b/dir/shop.html
@@ -104,20 +104,18 @@
 
   <div class="container container_shop">
     <div class="goods-out">
-
-
     </div>
-
-
-
+    <!--
     <div class="cart">
       <p class="name">Стул</p>
       <img src="../assets/images/product/cupboard_1.png" alt="">
       <div class="cost">1200</div>
-      <button class="liked">♡</button>
-      <button class="add-to-card">Купить</button>
+      <div class="cart__buttons">
+        <button class="liked">♡</button>
+        <button class="add-to-card">Купить</button>
+      </div>
     </div>
-
+  -->
   </div>
 
 
