--- a/dir/shop.html
+++ b/dir/shop.html
@@ -58,7 +58,7 @@
       <li>
         <ul class= "mini__container">
           <li class="basket__icon"><img src="../assets/images/basket__icon.png" alt="ordered"></li>
-          <li class="header__counter">0</li>
+          <li class="header__counter basket-counter"></li>
         </ul>
       </li>
     </ul>
@@ -69,27 +69,56 @@
   <nav class="header__down">
     <ul class="down__menu__list container">
       <li>
-        <a href="../dir/shop.html" class="down__menu__link">Мебель для офиса</a>
+        <a href="../dir/shop.html" class="down__menu__link">Кухня</a>
         <ul class="down__sub-menu__list">
-          <li><a href="" class="sub-menu__link">Мебель для сотрудников</a></li>
-          <li><a href="" class="sub-menu__link">Кабинеты эконом-класса</a></li>
-          <li><a href="" class="sub-menu__link">Кабинеты бизнес-класса</a></li>
-          <li><a href="" class="sub-menu__link">Кабинеты премиум класса</a></li>
-          <li><a href="" class="sub-menu__link">Кресла и стулья</a></li>
-          <li><a href="" class="sub-menu__link">Сейфы</a></li>
+          <li><a href="" class="sub-menu__link">Кухонные столы</a></li>
+          <li><a href="" class="sub-menu__link">Кухонные стулья</a></li>
+          <li><a href="" class="sub-menu__link">Кухни</a></li>
         </ul>
 
 
       </li>
       <li>
-        <a href="" class="down__menu__link">Мебель для дома</a>
-
+        <a href="" class="down__menu__link">Гостиная</a>
+        <ul class="down__sub-menu__list">
+          <li><a href="" class="sub-menu__link">Стенки</a></li>
+          <li><a href="" class="sub-menu__link">Шкафы</a></li>
+          <li><a href="" class="sub-menu__link">Диваны</a></li>
+          <li><a href="" class="sub-menu__link">Кресла</a></li>
+          <li><a href="" class="sub-menu__link">Пуфы</a></li>
+        </ul>
 
       </li>
-      <li><a href="" class="down__menu__link">Дизайн проекты</a></li>
-      <li><a href="" class="down__menu__link">Мебель под заказ</a></li>
-      <li><a href="" class="down__menu__link">Распродажа</a></li>
-      <li><a href="" class="down__menu__link">Контакты</a></li>
+      <li>
+        <a href="" class="down__menu__link">Детская</a>
+        <ul class="down__sub-menu__list">
+          <li><a href="" class="sub-menu__link">Детские кровати</a></li>
+          <li><a href="" class="sub-menu__link">Детские столы</a></li>
+          <li><a href="" class="sub-menu__link">Парты</a></li>
+          <li><a href="" class="sub-menu__link">Двухъярусные кровати</a></li>
+        </ul>
+      </li>
+      <li>
+        <a href="" class="down__menu__link">Спальня</a>
+        <ul class="down__sub-menu__list">
+          <li><a href="" class="sub-menu__link">Кровати</a></li>
+          <li><a href="" class="sub-menu__link">Шкафы</a></li>
+          <li><a href="" class="sub-menu__link">Гардеробные</a></li>
+          <li><a href="" class="sub-menu__link">Комоды</a></li>
+        </ul>
+
+      </li>
+      <li>
+        <a href="" class="down__menu__link">Прихожие</a>
+        <ul class="down__sub-menu__list">
+          <li><a href="" class="sub-menu__link">Прихожие</a></li>
+          <li><a href="" class="sub-menu__link">Обувницы</a></li>
+          <li><a href="" class="sub-menu__link">Ключницы</a></li>
+          <li><a href="" class="sub-menu__link">Подставки под зонты</a></li>
+        </ul>
+
+      </li>
+      <li><a href="" class="down__menu__link">Офисная мебель</a></li>
       <div class="search">
         <form>
           <input class="search__place" type="text" placeholder="Искать здесь...">
@@ -98,9 +127,13 @@
       </div>
     </ul>
   </nav>
+
 </div>
 
+
 <div class="content__shop">
+
+  <div class="mini-cart"></div>
 
   <div class="container container_shop">
     <div class="goods-out">
@@ -117,12 +150,36 @@
     </div>
   -->
   </div>
-
-
-
-
 </div>
+<div class="footer__contrainer">
+  <footer class="footer container">
+    <div class="footer__information">
+      <ul>
+        <li class="footer__text-header"><a href="">Информация</a></li>
+        <li class="footer__text"><a href="">Информация для покупателей</a></li>
+        <li class="footer__text"><a href="">Оплата и доставка</a></li>
+        <li class="footer__text"><a href="">Соискателям</a></li>
+        <li class="footer__text"><a href="">Отзывы</a></li>
+        <li class="footer__text"><a href="">Новости</a></li>
+        <li class="footer__text"><a href="">Контакты</a></li>
+        <li class="footer__text"><a href="">О нас</a></li>
+      </ul>
 
+      <ul>
+        <li class="footer__text-header"><a href="">Меню</a></li>
+        <li class="footer__text"><a href="">Мебель для дома</a></li>
+        <li class="footer__text"><a href="">Мебель для офиса</a></li>
+        <li class="footer__text"><a href="">Мебель для офиса</a></li>
+        <li class="footer__text"><a href="">Мебель под заказ</a></li>
+        <li class="footer__text"><a href="">Распродажа</a></li>
+      </ul>
+
+    </div>
+
+
+
+  </footer>
+</div>
 
 <script src="../js/jquery-3.6.0.min.js"></script>
 <script src="../js/main.js"></script>
