--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 							<li>	
 								<ul class= "mini__container">
 									<li class="basket__icon"><img src="assets/images/basket__icon.png" alt="ordered"></li>
-									<li class="header__counter">0</li>
+									<li class="header__counter basket-counter"></li>
 								</ul>
 							</li>
 						</ul>
@@ -68,27 +68,56 @@
 			<nav class="header__down">
 				<ul class="down__menu__list container">
 					<li>
-						<a href="./dir/shop.html" class="down__menu__link">Мебель для офиса</a>
+						<a href="./dir/shop.html" class="down__menu__link">Кухня</a>
 						<ul class="down__sub-menu__list">
-							<li><a href="" class="sub-menu__link">Мебель для сотрудников</a></li>
-							<li><a href="" class="sub-menu__link">Кабинеты эконом-класса</a></li>
-							<li><a href="" class="sub-menu__link">Кабинеты бизнес-класса</a></li>
-							<li><a href="" class="sub-menu__link">Кабинеты премиум класса</a></li>
-							<li><a href="" class="sub-menu__link">Кресла и стулья</a></li>
-							<li><a href="" class="sub-menu__link">Сейфы</a></li>
+							<li><a href="" class="sub-menu__link">Кухонные столы</a></li>
+							<li><a href="" class="sub-menu__link">Кухонные стулья</a></li>
+							<li><a href="" class="sub-menu__link">Кухни</a></li>
 						</ul>
 
 
 					</li>
 					<li>
-						<a href="" class="down__menu__link">Мебель для дома</a>
-
+						<a href="" class="down__menu__link">Гостиная</a>
+						<ul class="down__sub-menu__list">
+							<li><a href="" class="sub-menu__link">Стенки</a></li>
+							<li><a href="" class="sub-menu__link">Шкафы</a></li>
+							<li><a href="" class="sub-menu__link">Диваны</a></li>
+							<li><a href="" class="sub-menu__link">Кресла</a></li>
+							<li><a href="" class="sub-menu__link">Пуфы</a></li>
+						</ul>
 
 					</li>
-					<li><a href="" class="down__menu__link">Дизайн проекты</a></li>
-					<li><a href="" class="down__menu__link">Мебель под заказ</a></li>
-					<li><a href="" class="down__menu__link">Распродажа</a></li>
-					<li><a href="" class="down__menu__link">Контакты</a></li>
+					<li>
+						<a href="" class="down__menu__link">Детская</a>
+						<ul class="down__sub-menu__list">
+							<li><a href="" class="sub-menu__link">Детские кровати</a></li>
+							<li><a href="" class="sub-menu__link">Детские столы</a></li>
+							<li><a href="" class="sub-menu__link">Парты</a></li>
+							<li><a href="" class="sub-menu__link">Двухъярусные кровати</a></li>
+						</ul>
+					</li>
+					<li>
+						<a href="" class="down__menu__link">Спальня</a>
+						<ul class="down__sub-menu__list">
+							<li><a href="" class="sub-menu__link">Кровати</a></li>
+							<li><a href="" class="sub-menu__link">Шкафы</a></li>
+							<li><a href="" class="sub-menu__link">Гардеробные</a></li>
+							<li><a href="" class="sub-menu__link">Комоды</a></li>
+						</ul>
+
+					</li>
+					<li>
+						<a href="" class="down__menu__link">Прихожие</a>
+						<ul class="down__sub-menu__list">
+							<li><a href="" class="sub-menu__link">Прихожие</a></li>
+							<li><a href="" class="sub-menu__link">Обувницы</a></li>
+							<li><a href="" class="sub-menu__link">Ключницы</a></li>
+							<li><a href="" class="sub-menu__link">Подставки под зонты</a></li>
+						</ul>
+
+					</li>
+					<li><a href="" class="down__menu__link">Офисная мебель</a></li>
 					<div class="search">
 						<form>
 	    					<input class="search__place" type="text" placeholder="Искать здесь...">
@@ -175,6 +204,9 @@
 				
 			</footer>
 		</div>
-	
+
+
+		<script src="js/jquery-3.6.0.min.js"></script>
+		<script src="js/main.js"></script>
 	</body>
 </html>
