--- a/dir/cart.html
+++ b/dir/cart.html
@@ -133,6 +133,13 @@
     </div>
 </div>
 
+<div class="email-field">
+    <p>Имя: <input type="text" id="ename"></p>
+    <p>Email: <input type="text" id="email"></p>
+    <p>Телефон: <input type="text" id="ephone"></p>
+    <p><button class="send-email">Заказать</button></p>
+</div>
+
 
 <script src="../js/jquery-3.6.0.min.js"></script>
 <script src="../js/cart.js"></script>
